Bug 245528 - The tab order is not working in the ledger
Summary: The tab order is not working in the ledger
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-23 11:46 UTC by Cristian Oneț
Modified: 2010-07-23 14:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2010-07-23 11:46:15 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

I've added this from the mailing list so we won't forget about it: "Just wanted to let you guys know that the tab order is broken again in the ledger. The date and the amount are skipped when tabbing trough the widgets."

Reproducible: Always
Comment 1 Thomas Baumgart 2010-07-23 14:30:40 UTC
SVN commit 1153523 by tbaumgart:

Don't remove used widgets from the taborder list

BUG: 245528

 M  +15 -0     transactioneditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1153523