Don't remove used widgets from the taborder list

BUG: 245528

svn path=/trunk/extragear/office/kmymoney/; revision=1153523